# managerStoreageApp

./: CMakeLists.txt  Main.qml  README.md  Updates.xml  build_installer.sh  deploy_mac.sh  main.cpp  resource.qrc
com.tuan.myapp/: 1.0.1appforHa.app.7z.sha1
components/: AddNewCustomer.qml  AddNewProduct.qml  CreateTransaction.qml  CustomSearchTextField.qml  CustomerDrawer.qml  CustomerForm.qml  CustomerList.qml  CustomerSearchTextField.qml  Dashboard.qml  ImportBatch.qml  MainDrawer.qml  Notification.qml  ProductDrawer.qml  ProductForm.qml  ProductFormForTransaction.qml  ProductList.qml  ProductListForTransaction.qml  Sales.qml  Setting.qml  SuggestionBox.qml  Toast.qml  TransactionDrawer.qml  TransactionHistory.qml
installer/config/: config.xml
logic/: DatabaseManager.cpp  appcontroller.cpp  appcontroller.h  batch.cpp  batch.h  configcommand.cpp  configcommand.h  customer.cpp  customer.h  databasemanager.h  order.cpp  order.h  products.cpp  products.h  promotion.cpp  promotion.h  storeage.cpp  storeage.h  updateapp.cpp  updateapp.h
output/MyAppInstaller.app/Contents/: Info.plist
output/repository/: 2025-05-31-0334_meta.7z  Updates.xml
